Build custom JRE